# llm-pool

./: .env  .gitignore  Cargo.toml  config.json  readme.md
assets/: 5479f1a4-de32-4855-86c6-00d24c5920be.json
assets/css/: styles.css
src/: api.rs  home.rs  main.rs  opensearch_api.rs  s3.rs
templates/: docs.html  files.html  home.html  layout.html
